--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>StarterKit</title>
 </head>
 <body>
-  <h1>StarterKit by BlisS ;)</h1>
+  <h1>StarterKit by BlisS</h1>
+  <div id="app"></div>
 
+  <script src="bundle.js"></script>
 </body>
 </html>
